# seed-lite-prover

./: .gitignore  LICENSE  NOTICE  README.md  RESUME.md  pyproject.toml
configs/: ablation_matrix.yaml  llmlean.toml
docs/: FINDINGS.md
lean_project/: lakefile.toml  tmpamfbr_r4.lean
results/: ablation_20260525T002503.jsonl  ablation_20260525T012426.jsonl  ablation_20260525T013111.jsonl  ablation_20260525T022840.jsonl  ablation_20260525T082508.jsonl  ablation_20260525T112847.jsonl  ablation_20260525T114118.jsonl  ablation_20260525T120417.jsonl  ablation_20260525T121819.jsonl  ablation_20260525T122031.jsonl  ablation_20260525T131713.jsonl  ablation_20260525T133939.jsonl  ablation_20260525T134048.jsonl  ablation_20260525T134102.jsonl  ablation_20260525T135255.jsonl  ablation_20260525T135931.jsonl  ablation_20260525T142918.jsonl  ablation_20260525T143133.jsonl  ablation_20260525T144121.jsonl  ablation_20260525T144302.jsonl  ablation_20260525T145458.jsonl  ablation_20260525T150124.jsonl  ablation_20260525T150349.jsonl  ablation_20260525T151826.jsonl  ablation_20260525T153330.jsonl  ablation_20260527T091621.jsonl  ablation_20260527T093652.jsonl  ablation_20260527T095010.jsonl  ablation_20260527T100528.jsonl  ablation_20260527T100954.jsonl  ablation_20260527T154154.jsonl  ablation_20260527T160214.jsonl  attempts_20260525T012426.jsonl  attempts_20260525T013111.jsonl  attempts_20260525T022840.jsonl  attempts_20260525T082508.jsonl  attempts_20260525T112847.jsonl  attempts_20260525T114118.jsonl  attempts_20260525T120417.jsonl  attempts_20260525T121819.jsonl  (+28 more)
scripts/: score.py  (+4 more)
(+21 files in other folders)
